[gd_scene load_steps=17 format=2]

[ext_resource path="res://models/tree2.tscn" type="PackedScene" id=1]
[ext_resource path="res://models/rose.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/titlescreen.gd" type="Script" id=3]
[ext_resource path="res://models/bird.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/babybird.tscn" type="PackedScene" id=5]
[ext_resource path="res://BubblegumSans-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sounds/ChildhoodMemories.ogg" type="AudioStream" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.176471, 0.482353, 0.133333, 1 )

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 200, 200 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 10, 1, 10 )

[sub_resource type="ProceduralSky" id=4]
sky_top_color = Color( 0.803922, 0.913725, 0.937255, 1 )
sky_horizon_color = Color( 0.886275, 0.517647, 0.854902, 1 )
ground_bottom_color = Color( 0.317647, 0.337255, 0.356863, 1 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
ambient_light_color = Color( 0.976471, 0.976471, 0.941176, 1 )
glow_enabled = true
glow_strength = 1.22

[sub_resource type="Curve3D" id=6]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 0.223604, -1.02251, 1.05902, 0, 0, 0, 0, 0, 0, 16.7415, -1.3315, -1.96 ),
"tilts": PoolRealArray( 0, 0 )
}

[sub_resource type="Curve3D" id=7]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 4.51337, 3.44259, -1.62816, 0, 0, 0, 0, 0, 0, -12.5089, 3.97507, 0.610434 ),
"tilts": PoolRealArray( 0, 0 )
}

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 6 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = SubResource( 3 )

[node name="rose" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.10728, 0, 1.90792 )

[node name="tree2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.49415, 0, -8.15163 )

[node name="tree3" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.27717, 0, -15.1367 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999839, 0.017941, 0, -0.017941, 0.999839, 0, 3.96604, 9.28925 )

[node name="Path" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.44849, 6.33366, -0.381575 )
curve = SubResource( 6 )

[node name="BirdPathFollow" type="PathFollow" parent="Path"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.223604, -1.02251, 1.05902 )
rotation_mode = 0

[node name="bird" parent="Path/BirdPathFollow" instance=ExtResource( 4 )]
transform = Transform( -0.00578447, 0, 0.37064, 0, 0.419758, 0, -0.337123, 0, -0.00635957, 0, 3.84245, -3.78061 )

[node name="Path2" type="Path" parent="."]
curve = SubResource( 7 )

[node name="Bird2PathFollow" type="PathFollow" parent="Path2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.51337, 3.44259, -1.62816 )

[node name="bird" parent="Path2/Bird2PathFollow" instance=ExtResource( 4 )]
transform = Transform( 0.0136372, 0, -0.370392, 0, 0.419758, 0, 0.336897, 0, 0.014993, 0, 0, 3.50734 )

[node name="babybird" parent="." instance=ExtResource( 5 )]
transform = Transform( -0.106025, 0, -0.258243, 0, 0.277735, 0, 0.238137, 0, -0.114977, 0, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 77.0
margin_top = 253.0
margin_right = 533.0
margin_bottom = 365.0
color = Color( 0.54902, 0.513726, 0.513726, 0.635294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_right = 0.00699997
margin_left = 3.0
margin_top = 10.0
margin_right = 452.808
margin_bottom = 109.0
custom_fonts/font = SubResource( 8 )
text = "Up Into the Sky"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPlay" type="Button" parent="."]
anchor_right = 0.01
anchor_bottom = 0.032
margin_left = 260.0
margin_top = 627.0
margin_right = 328.0
margin_bottom = 642.232
custom_fonts/font = SubResource( 9 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 2.836
autoplay = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.340265, 0.94033, 0, -0.94033, 0.340265, 0, 20, 6.7071 )
light_color = Color( 0.8, 0.509804, 0.196078, 1 )
shadow_enabled = true

[connection signal="pressed" from="btnPlay" to="." method="_on_btnPlay_pressed"]
